Changes since version 3.0.1
---------------------------

- Added new method Ice::ObjectAdapter::destroy(). After this method
  has been called it is now permissible to recreate a new object
  adapter with the same name as the destroyed adapter.

- Added new method Ice::Communicator::createObjectAdapterWithRouter()
  which creates a routed object adapter. A object adapter can now only
  have one router associated with it, which is set with using this 
  method or by setting the <AdapterName>.Router property.  Also
  as a result of this the Ice::ObjectAdapter::addRouter() and
  Ice::ObjectAdapter::removeRouter() methods have been removed.

- Added property sets to IceGrid descriptors. Property sets allow to
  define set of properties in applications, nodes and templates
  descriptors. These property sets can then be referenced from the
  server, service and instance descriptors. See the IceGrid chapter in
  the Ice manual for more information.

- Changed the IceGrid::Admin::getApplicationDescriptor method to
  return the application descriptor without any variable
  substitutions done.

- Added communicator initialize method which takes a InitializationData
  structure containing communicator members which are only allowed
  to be set during communicator creation. Currently included are
  Properties, Logger, Stats and default context. The initializeWith 
  communicator initialization functions have been deprecated and the 
  setLogger(), setStats() and setDefaultContext() methods have been 
  removed.

- Added the new slice metadata, "deprecate" which can be used to
  qualify operations. On most platforms this will cause a compiler
  warning to be issued if user code uses the deprecated operation.

- Integrated contributed updates for Tru64.

- Added a new method addProxies() to Ice::Router, which can return
  evicted proxies. The old method addProxy() is now deprecated. Note
  that this is an internal interface for communications between